# fy_admin

./: .gitignore  Cargo.toml  README.md
box_agent/: Cargo.toml  cfg.json
box_agent/doc/: todo.txt
box_agent/src/: app_cfg.rs  app_ctx.rs  error.rs  lib.rs  main.rs  queue_item.rs
box_agent/src/service/: mod.rs
box_agent/src/service/car/: car_notify.rs  mod.rs
box_agent/src/service/face/: face_notify.rs  face_search.rs  mod.rs
box_agent/src/service/web/: handle.rs  mod.rs
box_agent/src/uplink/: mod.rs  uplink_api.rs  upload.rs
box_agent/src/util/: mod.rs  multipart_form.rs
doc/: build_arm64.sh  build_x86.sh  think.txt  todo.txt
doc/db/design/: bm_plat.pdma.json
doc/db/design/.back_bm_plat/: bm_plat-backup-2022630114330.pdma.json  bm_plat-backup-202269211302.pdma.json  bm_plat-backup-202269222520.pdma.json
doc/db/sql/: bm_plat-DDL-2022520235802.sql  plat_mysql.sql  plat_sqlite.sql  plat_trigger_mysql.sql
fy_base/: Cargo.toml
fy_base/src/: lib.rs
fy_base/src/api/: bm_api.rs  mod.rs  sync_api.rs  upload_api.rs
fy_base/src/sync/: mod.rs  rabbitmq_type.rs  response_type.rs
fy_base/src/util/: axum_log.rs  image.rs  logger.rs  minio.rs  mod.rs  mysql_util.rs  rabbitmq.rs  se5.rs  service.rs  time_format.rs  utils.rs
mysql_codegen/src/: lib.rs
sync_broker/: Cargo.toml  cfg.json
sync_broker/doc/: todo.txt
sync_broker/src/: app_cfg.rs  app_ctx.rs  error.rs  lib.rs  main.rs
sync_broker/src/dao/: mod.rs
sync_broker/src/service/: mod.rs  signal_service.rs
sync_broker/src/service/web/: mod.rs
sync_broker/src/util/: axum_log.rs  delay_queue.rs  log.rs  logger.rs  mod.rs  mysql_util.rs  service.rs  time_format.rs  utils.rs
sync_client/: Cargo.toml  cfg.json  sync_log.json
sync_client/doc/: todo.txt
sync_client/src/: app_cfg.rs  app_ctx.rs  error.rs  lib.rs  main.rs  queue_item.rs
sync_client/src/model/: mod.rs  queue_item.rs
sync_client/src/service/: mod.rs  signal_service.rs  timer_service.rs
sync_client/src/service/rabbitmq/: mod.rs  rabbitmq_service.rs
sync_client/src/service/wroker/: api.rs  mod.rs  work.rs  worker_service.rs
sync_server/: Cargo.toml  cfg.json
sync_server/doc/: api.txt  todo.txt
sync_server/src/: app_cfg.rs  app_ctx.rs  error.rs  lib.rs  main.rs
sync_server/src/dao/: base_model.rs  mod.rs
sync_server/src/service/: clean.rs  mod.rs  signal_service.rs
sync_server/src/service/rabbitmq/: mod.rs  model.rs  process_message.rs
sync_server/src/service/web/: mod.rs  model.rs  sync.rs
sync_server/src/util/: axum_log.rs  delay_queue.rs  ip.rs  mod.rs  mysql_util.rs  rabbitmq.rs  utils.rs
track_warehouse/: Cargo.toml  cfg.json
track_warehouse/doc/: todo.txt
track_warehouse/src/: app_cfg.rs  app_ctx.rs  error.rs  lib.rs  main.rs  queue_item.rs
track_warehouse/src/dao/: base_model.rs  mod.rs
track_warehouse/src/service/: face_search.rs  minio.rs  mod.rs  mysql_service.rs  rabbitmq_service.rs  trackdb_service.rs
track_warehouse/src/service/web/: handle.rs  mod.rs
