[package]
name = "box_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

fy_base = { path = "../fy_base" }
bytes = "1.1.0"

tokio = { version = "1.19.2", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }

axum = { version = "0.5", features = ["ws", "multipart", "headers"] }
tower = { version = "0.4", features = ["full"] }
hyper = { version = "0.14", features = ["server"] }

tower-http = { version = "0.3", features = ["full"] }
headers = "0.3"

reqwest = { version = "0.11", features = ["json", "multipart"] }

log = "0.4"
log4rs = "1.1.1"
clap = "3.1.18"

deadqueue = "0.2"
build-time = "0.1.1"

url = "2.2.2"

image = "0.24"
indexmap = "1.8"

## common
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

## 条件判断
[target.'cfg(not(any(target_os = "windows", target_os = "macos", target_os = "ios")))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(windows)'.dependencies]
ipconfig = "0.3.0"

[target.'cfg(not(windows))'.dependencies]
pnet = "0.28.0"