[package]
name = "sync_broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.18.2", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }

axum = {version="0.5", features=["ws","multipart","headers"]}
tower = { version = "0.4", features = ["full"] }
hyper ={version = "0.14",features = [ "server"]}

tower-http = {version= "0.3",features = ["full"]}
headers="0.3"

lapin="2.1"

log = "0.4"
log4rs = "1.1.1"

clap = "3.1.18"

deadqueue = "0.2"
build-time = "0.1.1"

mysql = "22.1"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "mysql", "chrono"] }

url = "2.2.2"

## common
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

## 条件判断
[target.'cfg(not(any(target_os = "windows", target_os = "macos", target_os = "ios")))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(windows)'.dependencies]
ipconfig="0.3.0"

[target.'cfg(not(windows))'.dependencies]
pnet="0.28.0"